<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:src="@drawable/ic_launcher_foreground"
                android:scaleType="fitXY"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/txt_create_account"
                android:text="@string/create_account"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_margin="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_username"
            android:hint="@string/enter_username"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_textColorHint="@color/myTextColor"
            app:met_baseColor="@color/myTextColor"
            app:met_primaryColor="@color/myTextColor"
            app:met_iconPadding="0dp"
            app:met_iconRight="@drawable/ic_user"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_password"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_textColorHint="@color/myTextColor"
            app:met_baseColor="@color/myTextColor"
            app:met_primaryColor="@color/myTextColor"
            app:met_iconPadding="0dp"
            app:met_iconRight="@drawable/ic_lock"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_margin="16dp"
        android:background="#431F63"
        android:text="@string/login"
        android:textSize="20sp"
        android:textColor="@color/white"
        style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/myTextColor" />

    <Button
        android:id="@+id/btn_nfc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="#431F63"
        android:textColor="@color/white"
        android:text="@string/test_nfc_directly"
        style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored" />

</LinearLayout>